--- a/FileManager.csproj
+++ b/FileManager.csproj
@@ -6,4 +6,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Infrastructure\" />
+  </ItemGroup>
+
 </Project>
